# personal_finance_tracker

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: .env.example  .test.env.example  main.py  superuser.py
app/src/alembic/: env.py
app/src/alembic/versions/: 09b356cf5bba_make_unique_field_in_payment_category_.py  0b8825627df6_change_on_delete_logic_in_models.py  48f58d545e0a_add_user_id_to_payment_model.py  4af4f10aecc3_make_new_models.py  56b0ac053489_add_refresh_token_model.py  76f8f06aaa9e_add_user_id_to_payment_method.py  809a45c4efc7_add_role_model.py  bfa8e8bba393_email_field_in_user_model_now_is_.py  eef92183f595_add_income_payment_and_icome_category_.py  f85512824d1a_add_new_models.py
app/src/core/: config.py
app/src/db/: postgres.py  redis.py
app/src/models/: __init__.py  base.py  enums.py  income_category.py  income_payment.py  incoming_category.py  incoming_transaction.py  models.py  outgoing_category.py  outgoing_transaction.py  payment.py  payment_category.py  payment_method.py  refresh_token.py  role.py  user.py  wallet.py
app/src/schemas/: auth.py  income_category.py  incoming_category.py  incoming_transaction.py  mixins.py  outgoing_category.py  outgoing_transaction.py  payment_category.py  payment_method.py  role.py  user.py  wallet.py
app/src/services/: auth_service.py  category_service.py  exceptions.py  payment_method_service.py  role_service.py  transaction_service.py  user_service.py  wallet_service.py
app/src/tests/: conftest.py
app/src/utils/: auth.py
(+35 files in other folders)
